# fastapi_tutorial

./: main.py  pyproject.toml
