[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Onah Jonah <onahjonah@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pytest = "^8.1.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
